# desktop

./: BootSplash.cpp  BootSplash.h  CMakeLists.txt  LSession.cpp  LSession.h  LXcbEventFilter.cpp  README.md  SystemWindow.h  WMProcess.cpp  WMProcess.h  global-includes.h  main.cpp
data/: start-lumina-desktop
data/audiofiles/: LICENCE
desktop/: LDesktop.cpp  LDesktop.h  LDesktopPluginSpace.cpp  LDesktopPluginSpace.h
desktop/desktop-plugins/applauncher/: AppLauncherPlugin.cpp
desktop/desktop-plugins/desktopview/: DesktopViewPlugin.cpp
framework-interfaces/: framework-OSInterface-FreeBSD.cpp  framework-OSInterface-template.cpp  framework-OSInterface_private.cpp
panel/: LPanel.cpp  LPanel.h
panel/panel-plugins/: LTBWidget.h  NewPP.h
panel/panel-plugins/appmenu/: LAppMenuPlugin.cpp
panel/panel-plugins/clock/: LClock.cpp
panel/panel-plugins/jsonmenu/: PPJsonMenu.cpp  PPJsonMenu.h
panel/panel-plugins/showdesktop/: LHomeButton.cpp
panel/panel-plugins/taskmanager/: LTaskButton.cpp  LTaskButton.h  LTaskManagerPlugin.cpp
screensaver/: SSBaseWidget.h
widgets/: SystemWindow.cpp
